Fix webkit scrollbar

--- a/src/components/City.module.css
+++ b/src/components/City.module.css
@@ -3,12 +3,28 @@
   max-height: 70%;
   background-color: var(--color-dark--2);
   border-radius: 7px;
-  overflow: scroll;
+  overflow: auto;
 
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 2rem;
+}
+
+.city::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+.city::-webkit-scrollbar-track {
+  background-color: var(--color-dark--2);
+  border-radius: 7px;
+}
+
+.city::-webkit-scrollbar-thumb {
+  background-color: #555;
+  border-radius: 10px;
+  border: 2px solid var(--color-dark--2);
 }
 
 .row {
